# Telemetry

./: .gitignore  LICENSE  README.md
prototype/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  prototypeDataSource.h  singleton.cpp  singleton.h  telemetry.cpp  telemetry.h
prototype/libs/: CMakeLists.txt
prototype/libs/kuserfeedback/: CMakeLists.txt
prototype/libs/zlib/: CMakeLists.txt
prototype/libs/zlib/contrib/minizip/: minizip.c
prototype/libs/zlib/win32/: Makefile.msc.ban  Makefile.msc.debug.ban
